removing usage of deprecated URL() and used Files.delete(path) instead of <filename>.delete() to eliminate codesmells